2001-09-28  Scott S. Goodwin  <scott@scottg.net>

	* Makefile: Cleaned up the Makefile. Fixed a problem where libpq
	wasn't being loaded, so we'd end up with a "function not defined
	error." In the previous version of the postgres driver, the
	libpq.so is used in the EXTRA_OBJS variable. I wonder if this
	means that the libpq.so file is loaded when the nspostgres.so
	module is loaded. I'm not sure how that works. Now, libpq.a is
	being used.

2001-09-08  Scott S. Goodwin  <scott@scottg.net>

	* Makefile: Turned off FOR_ACS_USE (I'll investigate what the
	changes are and possibly integrate that code as the
	default). Commented out lots and used the default include
	$(NSHOME)/include/Makefile.module to handle the make and
	installation process. The following now works:

	make install POSTGRES=/your/path INST=/where/aolserver/is

	* Makefile: changed to accept the
	POSTGRES=/your/postgres/path. This is mandatory. Also changed to
	expect NSHOME to be ../aolserver.

2001-08-31  Scott Goodwin  <scott@scottg.net>

	* ChangeLog: Created this ChangeLog file from the notes in the
	postgres.c file of the original source. This nspostgres module was
	created from the pgdriver2.0 sources found at OpenACS.org.

2001-04-14  Don Baccus  <dhogaza@pacifier.com>

	* Added Henry Minsky's patch which echoes changes in the Oracle
	driver to stream blob data directly to the connection rather than
	first spool to a temp file.  Since the call to return the file to
	the user doesn't return until after the operation is complete,
	spooling was a waste of time and resource.

2001-03-01  Don Baccus  <dhogaza@pacifier.com>

	* Added automatic quoting of emulated bind variables in order to
	make it compatible with the analogous routine in the Oracle
	driver.

2000-12-30  Dan Wickstrom <dcwickstrom@earthlink.net>

	* Added blob_select_file command.  Needed an inverse to
	blob_dml_file to support porting of webmail.

	* Added bind variable emulation to support acs 4.0 porting.
